--- a/doc/apsimx-scripts.Rmd
+++ b/doc/apsimx-scripts.Rmd
@@ -171,7 +171,7 @@ Unix/Linux paths
 
 Displaying below specific information related to when the vignette was built.
 
-```{r sisd}
+```{r sisd, eval = FALSE}
 sessionInfo()
 Sys.info()[["sysname"]]
 Sys.info()[["release"]]
