--- a/vignettes/apsimx.Rmd
+++ b/vignettes/apsimx.Rmd
@@ -106,7 +106,8 @@ After we run this example we can treat it as a standard data frame in R.
 
 ```{r read-in-maize-example, eval = TRUE, echo = FALSE}
 extd.dir <- system.file("extdata", package = "apsimx")
-maize <- read_apsimx("Maize.db", src.dir = extd.dir)
+## maize <- read_apsimx("Maize.db", src.dir = extd.dir)
+maize <- read.csv(paste0(extd.dir, "/Maize.csv"))
 ```
 
 ```{r summary-ggplot-maize}
@@ -190,7 +191,8 @@ sim <- apsimx("Wheat.apsimx", src.dir = tmp.dir2, value = "report")
 ```
 
 ```{r apsimx-wheat-read, echo = FALSE}
-sim <- read_apsimx("Wheat.db", src.dir = extd.dir)
+## sim <- read_apsimx("Wheat.db", src.dir = extd.dir)
+sim <- read.csv(paste0(extd.dir, "/Wheat.csv"))
 ```
 
 ```{r apsimx-wheat-summary}
